demo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: ghcr.io/nslhb/rollouts-demo:blue
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
            limits:
              memory: 128Mi
              cpu: 100m
      nodeSelector:
        workload: public
      tolerations:
        - key: Edge
          operator: Exists
  strategy:
    canary:
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo-stable
      trafficRouting:
        alb:
          ingress: rollouts-demo-ingress
          servicePort: 80
          rootService: rollouts-demo-root
      steps:
        - setWeight: 5
        - pause:
            { duration: 20s }
        - setWeight: 20
        - pause: { duration: 20s }
        - setWeight: 40
        - pause: { duration: 40s }
        - setWeight: 60
        - pause: { duration: 2m }
#        - analysis:
#            templates:
#              - templateName: success-rate
#                clusterScope: true
#            args:
#              - name: service-name
#                value: rollouts-demo
        - setWeight: 80
        - pause: { duration: 40s }
