demo/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-root
  namespace: apps
  annotations:
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
  namespace: apps
  annotations:
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo
    # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 7bf84f9696

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-stable
  namespace: apps
  annotations:
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo
    # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 789746c88d
